# meta_hack

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  allinone.md  client.py  docker-entrypoint.sh  inference.py  judge_report.txt  models.py  openenv.yaml  pyproject.toml  requirements.txt
client/: client.py
server/: app.py  environment.py  models.py
tests/: judge.py  phase2_check.py  test_environment.py
ui/: index.html
